<resources>
    <string name="app_name">易美工具</string>
    <string name="login_edit_account_text">请输入账号</string>
    <string name="login_edit_pwd_text">请输入密码</string>
    <string name="yimei_gujing_user">作业员</string>
    <string name="yimei_gujing_equipment">设　备</string>
    <string name="yimei_gujing_proNum">生产批号</string>
    <string name="yimei_gujing_oldmbox">料盒号</string>
    <string name="yimei_kaoxiang_user">作业员</string>
    <string name="yimei_kaoxiang_num">烤箱号</string>
    <string name="yimei_kaoxiang_proNum">生产批号</string>
    <string name="yimei_biandai_user">作业员</string>
    <string name="yimei_biandai_num">设　备</string>
    <string name="yimei_biandai_proNum">生产批号</string>
    <string name="biandai_lotno">测试号</string>
    <string name="biandai_prd_name">机型</string>
    <string name="biandai_qty">数量</string>
    <string name="biandai_bincode">bincode</string>
    <string name="biandai_sid">工单号</string>
    <string name="biandai_sid1">批次号</string>
    <string name="ruliao">上料</string>
    <string name="kaigong">开工</string>
    <string name="chuzhan">出站</string>
    <string name="jiajiao">加胶</string>
    <string name="Data1">生产批号</string>
    <string name="Data2">当前状态</string>
    <string name="Data3">机种</string>
    <string name="Data4">数量</string>
    <string name="Data5">料盒</string>
    <string name="fircheck">是否需要首检</string>
    <string name="mainTitle">主页面</string>
    <string name="gujing_type">制　程</string>
    <string name="main_gujin">固晶工站</string>
    <string name="main_tongyong">通用工站</string>
    <string name="main_hanxian">焊线</string>
    <string name="main_biandai">编带</string>
    <string name="main_kaoxiang">烤箱</string>
    <string name="slkid">工单</string>
    <string name="yimei_shangliao_materialCode">材料代码</string>
    <string name="yimei_shangliao_materialPihao">材料批号</string>
    <string name="yimei_shangliao_Num">数　　量</string>
    <string name="yimei_shangliao_NumDue">应 发 数</string>
    <string name="yimei_shangliao_NumIssued">已 发  数</string>
    <string name="yimei_shangliao_state">状　　态</string>
    <string name="xiangci">项次</string>
    <string name="cailiaohao">材料号</string>
    <string name="cailiaoCode">材料号</string>
    <string name="cailiaoName">材料名称</string>
    <string name="BinCode">BinCode</string>
    <string name="cailiaopici">材料批次</string>
    <string name="cailiaoNum">数量</string>
    <string name="verification">验证</string>
    <string name="unit">单位</string>
    <string name="yingfaNum">应发量</string>
    <string name="haosunNum">耗损量</string>
    <string name="tidaipin">替代品</string>
    <string name="info">备注</string>
    <string name="isNum">验证数量</string>
    <string name="yimei_jiajiao_jidiaojinumber">点胶机号</string>
    <string name="yimei_jiajiao_jiaobeipihao">胶杯批号</string>
    <string name="yimei_hunjiao_prtno">胶杯批号</string>
    <string name="yimei_hunjiao_indate">混合时间</string>
    <string name="yimei_hunjiao_newly_time">新到期时间</string>
    <string name="yimei_jiajiao_sid">单号</string>
    <string name="yimei_jiajiao_zcno">制程代号</string>
    <string name="yimei_jiajiao_op">作业员</string>
    <string name="yimei_jiajiao_sbid">设备编号</string>
    <string name="yimei_jiajiao_prtno">胶杯批号</string>
    <string name="yimei_jiajiao_slkid">制令单号</string>
    <string name="yimei_jiajiao_sbuid">单据类型*</string>
    <string name="yimei_jiajiao_prd_no">机型名称</string>
    <string name="yimei_jiajiao_qty">数量</string>
    <string name="yimei_jiajiao_state">状态*</string>
    <string name="yimei_jiajiao_indate">加胶时间</string>
    <string name="yimei_jiajiao_dcid">设备编号</string>
    <string name="yimei_jiajiao_mkdate">胶杯打印时间</string>
    <string name="yimei_jiajiao_remark">工单备注</string>
    <string name="yimei_jiajiao_edate">到期时间</string>
    <string name="yimei_jiajiao_prd_name">货品名称</string>
    <string name="ruku_cid">项次</string>
    <string name="ruku_checkid">检验</string>
    <string name="ruku_bat_no">批号</string>
    <string name="ruku_prd_no">产品代号</string>
    <string name="ruku_prd_mark">BinCode</string>
    <string name="ruku_prd_name">产品名称</string>
    <string name="ruku_wh">仓库</string>
    <string name="ruku_qty">数量</string>
    <string name="ruku_info">备注</string>
    <string name="mozu_sid1">批次号</string>
    <string name="mozu_sid">工号</string>
    <string name="mozu_prd_name">机型</string>
    <string name="mozu_qty">数量</string>
    <string name="zhuangxiang_chukushenqing">入库申请</string>
    <string name="zhuangxiang_jinbanren">经办人</string>
    <string name="zhuangxiang_canpinxinghao">产品型号</string>
    <string name="zhuangxiang_canpindaihao">产品代号</string>
    <string name="zhuangxiang_chukuNum">出库数量</string>
    <string name="zhuangxiang_shoudingdanhao">受订单号</string>
    <string name="zhuangxiang_bat_no">批次号</string>
    <string name="zhuangxiang_Num">数量</string>
    <string name="zhuangxiang_bincode">BinCode</string>
    <string name="zhuangxiang_manxiangNum">满箱数量</string>
    <string name="zhuangxiang_cid">项次</string>
    <string name="zhuangxiang_prd_no">产品名称</string>
    <string name="zhuangxiang_prd_mark">BinCode</string>
    <string name="zhuangxiang_prd_name">产品代号</string>
    <string name="zhuangxiang_unit">单位</string>
    <string name="zhuangxiang_wh">仓库</string>
    <string name="zhuangxiang_qty">数量</string>
    <string name="zhuangxiang_rem">备注</string>
    <string name="zhuangxiang_mm_dd">入库日期</string>
    <string name="zhuangxiang_sc_dd">送检日期</string>
    <string name="zhuangxiang_dig_chukudan">出库单号</string>
    <string name="zhuangxiang_dig_shoudingdan">受定单号</string>
    <string name="zhuangxiang_dig_kuhudingdan">客户订单号</string>
    <string name="zhuangxiang_dig_chuhuobeizhu">出货备注</string>
    <string name="zhuangxiang_dig_prdName">产品机型</string>
    <string name="yimei_zhijulingchu_mojuId">模具编号</string>
    <string name="yimei_zhijulingchu_zcno">制程代号</string>
    <string name="zhijulingchu_sid1">生产批次</string>
    <string name="zhijulingchu_sbid">模具编号</string>
    <string name="zhijulingchu_slkid">制令单号</string>
    <string name="zhijulingchu_prd_no">机型名称</string>
    <string name="zhijulingchu_mkdate">领用日期</string>
    <string name="zhijuqingxi_mkdate">清洗时间</string>
    <string name="zhijuruku_mkdate">入站时间</string>
    <string name="yimei_zhijuqingxi_zhangliceshi">张力测试</string>
    <string name="jiaxigao_prtno">锡膏批号</string>
    <string name="jiaxigao_op">作业员</string>
    <string name="jiaxigao_sbid">设备编号</string>
    <string name="jiaxigao_slkid">制令单号</string>
    <string name="jiaxigao_prdno">机型名称</string>
    <string name="jiaxigao_qty">数量</string>
    <string name="jiaxigao_indate">上锡膏时间</string>
    <string name="jiaxigao_mkdate">胶杯打印时间</string>
    <string name="jiaxigao_edate">到期时间</string>
    <string name="scfl_mo_no">制令单号</string>
    <string name="scfl_prd_no">材料号</string>
    <string name="scfl_bat_no">批次号</string>
    <string name="scfl_bincode">BinCode</string>
    <string name="scfl_qty">数量</string>
    <string name="scfl_yinfa">应发</string>
    <string name="scfl_yifa">已发</string>
    <string name="scfl_gdic">料号</string>
    <string name="scfl_name">名称</string>
    <string name="scfl_sph">批号</string>
    <string name="scfl_prd_mark">BinCode</string>
    <string name="scfl_spc">规格</string>
    <string name="scfl_materials_name">材料名称</string>
    <string name="scfl_materials_bincode">货品特征</string>
    <string name="scfl_materials_wh">仓库</string>
    <string name="scfl_materials_unit">单位</string>
    <string name="scfl_materials_qty_rsv">应发量</string>
    <string name="scfl_materials_qty_lost">损耗量</string>
    <string name="zhuanchu_zcno">制程代号</string>
    <string name="yimei_zhuanchu_zcno">当前制程</string>
    <string name="yimei_zhuanchu_zcno1">转入制程</string>
    <string name="yimei_zhuanchu_slkid">制令单号</string>
    <string name="yimei_zhuanchu_prd_name">机型名称</string>
    <string name="yimei_zhuanchu_qty">批量</string>
    <string name="yimei_weixiuok_xiangxi">详细</string>
    <string name="jieshou">接收</string>
    <string name="jieshou_tuihui">退回</string>
    <string name="yimei_jieshou_op">接收人</string>
    <string name="yimei_jieshou1_zcno">接受制程</string>
    <string name="yimei_jieshou_state">接收状态</string>
    <string name="yimei_jieshou_time">接收时间</string>
    <string name="yimei_jieshou_sid1">生产批次</string>
    <string name="yimei_jieshou_zcno1">转入制程</string>
    <string name="yimei_jieshou_slkid">制令单号</string>
    <string name="yimei_jieshou_prd_name">机型名称</string>
    <string name="yimei_jieshou_qty">数量</string>
    <string name="gaowendianliang">高温点亮</string>
    <string name="waiguan">外观</string>
    <string name="tiebeijiao">贴背胶</string>
    <string name="didianliu">低电流</string>
    <string name="kandai">看带</string>
    <string name="plasma">plasma清洗</string>
    <string name="pinzhi_shoujian">首检检验记录</string>
    <string name="pinzhi_xunjian">巡检记录</string>
    <string name="gaowendianliang_sid1">生产批次</string>
    <string name="gaowendianliang_slkid">制令单号</string>
    <string name="gaowendianliang_prd_no">机型名称</string>
    <string name="gaowendianliang_qty">数量</string>
    <string name="gaowendianliang_zcno">当前制程</string>
    <string name="gaowendianliang_zcno1">下一制程</string>
    <string name="yimei_shoujian_cid">项次</string>
    <string name="yimei_shoujian_xmbm">编码</string>
    <string name="yimei_shoujian_xmmc">名称</string>
    <string name="yimei_shoujian_standard">标准值</string>
    <string name="yimei_shoujian_value1">实际值1</string>
	<string name="yimei_shoujian_value2">实际值2</string>
    <string name="yimei_shoujian_value3">实际值3</string>
    <string name="yimei_shoujian_value4">实际值4</string>
    <string name="yimei_shoujian_value5">实际值5</string>
    <string name="yimei_shoujian_value6">实际值6</string>
    <string name="yimei_shoujian_bok">结果判定</string>
    <string name="yimei_shoujian_remark">说明</string>
	<string name="shoujian_bok">OK</string>
	<string name="yimei_shoujian_prd_no">货品名称</string>
    <string name="yimei_shoujian_caused">发起原因</string>
    <string name="yimei_shoujian_ps">结果判定</string>
    <string name="yimei_shoujian_caozuo">操作</string>
    <string name="yimei_shoujian_chakan">更多</string>
    <string name="yimei_shoujian_err_sidf">检验单号</string>
    <string name="yimei_shoujian_err_hpdate">日期</string>
    <string name="yimei_shoujian_err_zcno">制程代号</string>
    <string name="yimei_shoujian_err_sbid">设备号</string>
    <string name="yimei_shoujian_err_sid1">生产批次</string>
    <string name="yimei_shoujian_err_slkid">工单号</string>
    <string name="yimei_shoujian_err_prd_no">机型名称</string>
    <string name="yimei_shoujian_err_qty">批次数量</string>
    <string name="yimei_shoujian_err_op_c">检验人员</string>
    <string name="yimei_shoujian_err_bbid">班别</string>
    <string name="yimei_shoujian_err_ptype">异常类别</string>
    <string name="yimei_shoujian_err_risklvl">印象级别</string>
    <string name="yimei_shoujian_err_clid">临时措施</string>
    <string name="yimei_shoujian_err_capaid">是否发起</string>
    <string name="yimei_shoujian_err_determine">品质判定</string>
    <string name="yimei_shoujian_err_remark">问题描述</string>
    <string name="yimei_shoujian_err_whys">分析原因</string>
    <string name="ort_quyang_op">作业员</string>
    <string name="ort_quyang_sbid">设备号</string>
    <string name="ort_quyang_sid1">批次号</string>
    <string name="ort_quyang_zcno">制程</string>
    <string name="ort_quyang_slkid">指令单</string>
    <string name="ort_quyang_prd_no">机型代码</string>
    <string name="ort_quyang_prd_name">机型名称</string>
    <string name="ort_quyang_qty">数量</string>
    <string name="ort_quyang_sid">单号</string>
    <string name="ort_quyang_mkdate">取样时间</string>
    <string name="shangliaoTitle">上料</string>
    <string name="jiajiaoTitle">加胶登记</string>
    <string name="mozuTitle">模组</string>
    <string name="rukuTitle">生产入库</string>
    <string name="zhuangxiangTitle">装箱作业</string>
    <string name="hunjiaoTitle">混胶登记</string>
    <string name="zhijulingchuTitle">制具领出</string>
    <string name="zhijuQingXiTitle">制具清洗</string>
    <string name="zhijuRuKuTitle">制具入库</string>
    <string name="jiaxigaoTitle">加锡膏登记</string>
</resources>