<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.yimei_v01.JieShouActivity" >

    <TableLayout
        android:id="@+id/jieshou_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:shrinkColumns="0,1,2" >

        <TableRow android:layout_marginTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yimei_gujing_user" />

            <EditText
                android:id="@+id/yimei_jieshou_user"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_edittext"
                android:ems="10"
                android:enabled="true"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:labelFor="@+id/yimei_jieshou_user"
                android:maxLength="12"
                android:paddingLeft="10dp"
                android:tag="接收作业员" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/yimei_jieshou"
                android:layout_width="0dip"
                android:layout_height="40dp"
                android:layout_margin="5dip"
                android:layout_weight="1"
                android:background="@drawable/btn_shape_check_border"
                android:text="@string/jieshou" />

            <Button
                android:id="@+id/yimei_jieshou_tuihui"
                android:layout_width="0dip"
                android:layout_height="40dp"
                android:layout_margin="5dip"
                android:layout_weight="1"
                android:background="@drawable/btn_shape_check_border"
                android:text="@string/jieshou_tuihui" />
        </LinearLayout>
    </TableLayout>

    <LinearLayout
        android:id="@+id/jieshou_data_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jieshou_tab"
        android:layout_marginTop="10dp"
        android:background="#ccc"
        android:minHeight="40dip"
        android:orientation="horizontal" >

        <com.yimei.scrollview.GeneralCHScrollView
            android:id="@+id/jieshou_scroll_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="50dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="#"
                    android:textColor="#850" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/yimei_jieshou_op"
                    android:textColor="#850" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/yimei_jieshou_state"
                    android:textColor="#850" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/yimei_jieshou_time"
                    android:textColor="#850" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/yimei_jieshou_sid1"
                    android:textColor="#850" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/yimei_jieshou_zcno1"
                    android:textColor="#850" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/yimei_jieshou_slkid"
                    android:textColor="#850" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/yimei_jieshou_prd_name"
                    android:textColor="#850" />
                
                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/yimei_jieshou_qty"
                    android:textColor="#850" />
            </LinearLayout>
        </com.yimei.scrollview.GeneralCHScrollView>
    </LinearLayout>

    <ListView
        android:id="@+id/jieshou_scroll_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/jieshou_data_title"
        android:cacheColorHint="@android:color/transparent"
        android:scrollbars="none" >
    </ListView>

</RelativeLayout>