<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.yimei_v01.KuaiSuGuoZhanActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/gaowendianliang"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_check_border"
            android:text="@string/gaowendianliang" />
        
        <Button
            android:id="@+id/waiguan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_check_border"
            android:text="@string/waiguan" />
        
        <Button
            android:id="@+id/tiebeijiao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_check_border"
            android:text="@string/tiebeijiao" />
        
        <Button
            android:id="@+id/didianliu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_check_border"
            android:text="@string/didianliu" />
        
        <Button
            android:id="@+id/kandai"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_check_border"
            android:text="@string/kandai" />
    </LinearLayout>

</RelativeLayout>