<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minHeight="50dip"
    android:orientation="horizontal" >

    <com.yimei.scrollview.GeneralCHScrollView
        android:id="@+id/jiaxigao_item_scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/yimei_jiaxigao_op"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/jiaxigao_op"
                android:textColor="#850" />

            <TextView
                android:id="@+id/yimei_jiaxigao_prtno"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/jiaxigao_prtno"
                android:textColor="#850" />

            <TextView
                android:id="@+id/yimei_jiaxigao_sbid"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/jiaxigao_sbid"
                android:textColor="#850" />

            <TextView
                android:id="@+id/yimei_jiaxigao_slkid"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/jiaxigao_slkid"
                android:textColor="#850" />

            <TextView
                android:id="@+id/yimei_jiaxigao_prdno"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textColor="#850" />

            <TextView
                android:id="@+id/yimei_jiaxigao_qty"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textColor="#850" />

            <TextView
                android:id="@+id/yimei_jiaxigao_indate"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textColor="#850" />

            <TextView
                android:id="@+id/yimei_jiaxigao_mkdate"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textColor="#850" />
        </LinearLayout>
    </com.yimei.scrollview.GeneralCHScrollView>

</LinearLayout>